Tue Feb  6 16:38:08 2007  Koichi Sasada  <ko1@atdot.net>

	* vm_opts.h: set properties:
	  svn:keywords:  Author Date Id Revision
	  svn:eol-style: native

Tue Feb  6 15:55:46 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (ivar_i): need to support class local instance
	  variables.

Tue Feb  6 15:44:11 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): fix setting is_local flag.

	* yarvtest/test_class.rb: add a test for class local isntance variable.

Tue Feb  6 14:15:34 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c, insns.def: remove (get|set)instancevariable2 and add a
	  operand is_local to (get|set)instancevariable.

	* yarvtest/test_class.rb: add a test for class local instance variable.

	* parse.y (rb_decompose_ivar2): remove unused variable oid.

	* tool/insns2vm.rb: remove needless require.

Tue Feb  6 11:18:41 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb: check the control connection on EPIPE.
	  Thanks, Simon Williams. [ruby-core:9547]

Tue Feb  6 11:03:27 2007  Koichi Sasada  <ko1@atdot.net>

	* complement last commit.

	* common.mk (*.inc): use VPATH.

	* vm_opts.h: renamed from vm_opts.h.base.

Tue Feb  6 10:02:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/insns2vm.rb: use vm_opts.h in VPATH.

Tue Feb  6 03:47:58 2007  Koichi Sasada  <ko1@atdot.net>

	* proc.c: support Binding#eval.

	* yarvtest/test_eval.rb: add a test for above change.

Tue Feb  6 03:13:33 2007  Koichi Sasada  <ko1@atdot.net>

	* proc.c: refactoring (remove K&R style, move Binding stuffs from
	  Init_Proc() to Init_Binding()).

Tue Feb  6 01:07:14 2007  Koichi Sasada  <ko1@atdot.net>

	* intern.h: prepare rb_last_status_get() and rb_last_status_set().
	  Use these functions instead of rb_last_status ([ruby-dev:30264]).

	* process.c: define above functions.

	* ext/pty/pty.c: use above functins.

	* io.c (pipe_finalize): ditto.

	* process.c: ditto.

Mon Feb  5 21:26:56 2007  Koichi Sasada  <ko1@atdot.net>
